name:                core-catcher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/core-catcher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , GameLogic
                     , Network.Protocol
                     , Network.ElmDerive
                     , Glue
                     , GlueMock
                     , Network.ExampleGameView
                     , App.WsApp
                     , App.WsAppUtils
                     , App.State
                     , App.ConnectionMgnt
                     , App.Connection
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , vector
                     , fgl
                     , containers
                     , websockets
                     , wai-websockets
                     , http-types
                     , aeson
                     , elm-bridge
                     , bytestring
                     , safe
                     , QuickCheck
  default-language:    Haskell2010

executable core-catcher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
  ghc-options:         -threaded -Wall -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , core-catcher
                     , warp
                     , wai
                     , text
                     , websockets
                     , wai-websockets
                     , http-types
                     , classy-prelude
                     , containers
                     , aeson
                     , stm
                     , transformers
                     , bytestring
  default-language:    Haskell2010

test-suite core-catcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestMain.hs
  other-modules:       ProtocolTest
                     , SpecTest
                     , MainTest
                     , Mock.Connection
  build-depends:       base
                     , core-catcher
                     , classy-prelude
                     , QuickCheck
                     , HTF
                     , aeson
                     , websockets
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/core-catcher
