name:                core-catcher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/core-catcher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GameNg
                     , GameState
                     , Network.Protocol
                     , Network.ElmDerive
                     , Config.Network
                     , Config.GameConfig
                     , App.App
                     , App.AppUtils
                     , App.State
                     , App.ConnectionState
                     , App.Connection
                     , EntityMgnt
                     , TH.MonoDerive
                     , TH.TypeFamily
                     , TH.MonoFunctions

  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , vector
                     , fgl
                     , containers
                     , websockets
                     , wai-websockets
                     , http-types
                     , aeson
                     , elm-bridge
                     , bytestring
                     , safe
                     , extra
                     , QuickCheck
                     , data-easy
                     , either
                     , random
                     , template-haskell
                     , transformers
                     , errors
  default-language:    Haskell2010

executable core-catcher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       WsConnection
  ghc-options:         -threaded -Wall -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , core-catcher
                     , warp
                     , wai
                     , wai-app-static
                     , text
                     , websockets
                     , wai-websockets
                     , http-types
                     , classy-prelude
                     , containers
                     , aeson
                     , stm
                     , random
                     , transformers
                     , bytestring
  default-language:    Haskell2010

executable elm-bridge
  hs-source-dirs:      frontend/elm-bridge
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , classy-prelude
                     , core-catcher
  default-language:    Haskell2010

test-suite core-catcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestMain.hs
  other-modules:       ProtocolTest
                     , ConnectionMgntTest
                     , Mock.Connection
                     , GameNgTest
                     , AppTest
                     , GameConfigTest
  build-depends:       base
                     , core-catcher
                     , classy-prelude
                     , containers
                     , QuickCheck
                     , HTF
                     , HUnit
                     , aeson
                     , websockets
                     , data-easy
                     , extra
                     , random
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/core-catcher
